--- a/templates/courses/index.html
+++ b/templates/courses/index.html
@@ -19,7 +19,7 @@
             {% if course.image %}
             <img src="{{ course.image.url }}" alt="{{ course.name }}" />
             {% else %}
-            <img src="{% static 'static/img/course-image.png' %}" alt="{{ course.name }}" />
+            <img src="{% static 'img/course-image.png' %}" alt="{{ course.name }}" />
             {% endif %}
             </a>
         </div>
